--- a/content/1.docs/1.getting-started/1.index.md
+++ b/content/1.docs/1.getting-started/1.index.md
@@ -1,23 +1,45 @@
 ---
-title: Check What To DO 
-description: Welcome to Nuxt UI SaaS template.
+title: Getting Started with Salesforce CRM Analytics
+description: Start here to understand what this training covers, how modules are structured, and how to get the most out of Salesforce CRM Analytics as a learner.
 navigation:
-  icon: i-lucide-house
+  icon: i-lucide-compass
 ---
 
-This template is a ready-to-use SaaS template made with [Nuxt UI](https://ui.nuxt.com) to create beautiful & responsive Nuxt applications in minutes.
+Welcome to the **Salesforce CRM Analytics Getting Started** module 👋
 
-This template includes a customizable landing page, a pricing page, a documentation, a blog and authentication pages (login, register).
+This section is your **onboarding ramp**. Before we touch bindings, SAQL, or complex dashboards, you'll understand:
 
-## Key Features
+- What Salesforce CRM Analytics actually is
+- Why it exists when we already have Salesforce reports & dashboards
+- How it evolved from Wave → Einstein Analytics → Tableau CRM → CRM Analytics
+- Core terminology you’ll see everywhere (datasets, lenses, recipes, dataflows…)
+- How to set up a safe **playground org** and enable CRM Analytics
+- How to open Analytics Studio and build your **very first dashboard**
 
-This template includes a range of features designed to streamline documentation management:
+## How this training is structured
 
-- **Powered by** [**Nuxt**](https://nuxt.com): Utilizes the latest Nuxt framework for optimal performance.
-- **Built with** [**Nuxt UI**](https://ui.nuxt.com): Integrates a comprehensive suite of UI components.
-- [**MDC Syntax**](https://content.nuxt.com/usage/markdown) **via** [**Nuxt Content**](https://content.nuxt.com): Supports Markdown with component integration for dynamic content.
-- **Auto-generated Sidebar Navigation**: Automatically generates navigation from content structure.
-- **Full-Text Search**: Includes built-in search functionality for content discovery.
-- **Optimized Typography**: Features refined typography for enhanced readability.
-- **Dark Mode**: Offers dark mode support for user preference.
-- **Extensive Functionality**: Explore the template to fully appreciate its capabilities.
+- **Short lessons** instead of huge walls of text  
+- **Real org mental model** – everything is explained like you’re working in a real Salesforce org
+- **Hands-on focus** – most lessons end with “Do this in your org” style checklists
+- **Role-aware** – concepts are explained for Admins, Analysts, Consultants, and Devs
+
+## Who this module is for
+
+This Getting Started module is perfect if:
+
+- You are **new to CRM Analytics** and don’t know where to begin
+- You’ve seen dashboards but don’t understand **how they are built**
+- You’re a Salesforce Admin / BA / RevOps person who wants to move beyond standard reports
+- You want a **structured path**, not random YouTube videos
+
+## What you’ll be able to do at the end
+
+By the end of this section, you’ll be able to:
+
+- Explain what Salesforce CRM Analytics is in **one clear sentence**
+- Tell someone why Analytics ≠ “just another report”
+- Navigate Analytics Studio without fear
+- Set up a playground org and **enable CRM Analytics**
+- Build a simple dashboard with at least one lens and a filter
+
+Next: let’s properly welcome you and set expectations for your learning journey.
